# hermes-flight-comm

./: CMakeLists.txt  README.md
include/: hermes.h
main/: CMakeLists.txt  flight_comm.c  flight_comm.h  main.c
src/: audio.c  crypto.c  main.c  mesh_net.c  node.c  tmr_vote.c
tests/: test_hermes.c
